<resources>
    <string name="app_name">Loteria</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="concurso_anterior">Concurso anterior</string>
    <string name="proximo_concurso">Próximo concurso</string>
    <string name="lotomania">Lotomania</string>
    <string name="lotofacil">Lotofácil</string>
    <string name="quina">Quina</string>
    <string name="mega_sena">Mega Sena</string>
    <string name="dupla_sena">Dupla Sena</string>
    <string name="timemania">Timemania</string>
    <string name="dia_de_sorte">Dia de Sorte</string>
    <string name="federa">Federal</string>
    <string name="lottery">Loteria</string>
    <string name="conferencia">Conferência</string>
    <string name="historico">Histórico</string>
    <string name="meus_jogos">Meus jogos</string>
    <string name="nenhuma_dezena_selecionada">Nenhuma dezena selecionada</string>
    <string name="conferir">Conferir</string>
    <string name="limpar">Limpar</string>
    <string name="gerar">Gerar</string>
    <string name="concurso">Concurso</string>
    <string name="acumulada_proximo_concurso">Acumulado próximo concurso:</string>
    <string name="sorteio_1">1° Sorteio</string>
    <string name="sorteio_2">2° Sorteio</string>
    <string name="concurso_e_data">Concurso %1$s (%2$s)</string>
    <string name="bilhete">Bilhete</string>
    <string name="premio">Prêmio</string>
    <string name="destino">%d°</string>
    <string name="valor">R$ %s</string>
    <string name="time_coracao">Time do coração: %s</string>
    <string name="mes_sorte">Mês da Sorte: %s</string>
    <string name="filtrar">Filtrar</string>

</resources>
