<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gutotech.loteria.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gutotech.loteria.ui.conferencia.DashboardFragment"
        android:label="@string/conferencia"
        tools:layout="@layout/fragment_conferencia" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gutotech.loteria.ui.historico.HistoricoFragment"
        android:label="@string/historico"
        tools:layout="@layout/fragment_historico" />
</navigation>
